--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,9 @@
             "styles": [
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+
+
               "src/styles.css"
             ],
             "scripts": []
